Refactor index.html by removing inline styles and adding imports
Removed inline CSS for body font-family and added new imports for 'html-to-image' and 'dom-to-image-more'.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Satisfy&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-    }
-  </style>
 <script type="importmap">
 {
   "imports": {
@@ -22,11 +17,12 @@
     "path": "https://aistudiocdn.com/path@^0.12.7",
     "vite": "https://aistudiocdn.com/vite@^7.2.6",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-    "url": "https://aistudiocdn.com/url@^0.11.4"
+    "url": "https://aistudiocdn.com/url@^0.11.4",
+    "html-to-image": "https://aistudiocdn.com/html-to-image@^1.11.11",
+    "dom-to-image-more": "https://aistudiocdn.com/dom-to-image-more@^3.7.2"
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
 <body class="bg-slate-100 dark:bg-slate-900">
   <div id="root"></div>
